updated homepage url

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "bugs": {
     "url": "https://github.com/chenjr16/fruitwars/issues"
   },
-  "homepage": "https://chenjr16.github.io/fruitwars/front-end/index.html",
+  "homepage": "https://chenjr16.github.io/fruitwars/",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1"
